make it more responsive

--- a/src/components/calendar/day-tile/day-tile.module.css
+++ b/src/components/calendar/day-tile/day-tile.module.css
@@ -43,3 +43,13 @@
         }
     }
 }
+
+@media (max-width: 600px) {
+    .container {
+        width: 100%;
+    }
+
+    .dayHeadline {
+        height: 20px;
+    }
+}
