--- a/src/components/calendar/calendar.module.css
+++ b/src/components/calendar/calendar.module.css
@@ -67,4 +67,10 @@
             float: right;
         }
     }
+
+    @media (max-width: 600px) {
+        .dayTileContainer {
+            flex-direction: column;
+        }
+    }
 }
