make it more responsive

--- a/src/components/calendar/calendar.module.css
+++ b/src/components/calendar/calendar.module.css
@@ -72,5 +72,10 @@
         .dayTileContainer {
             flex-direction: column;
         }
+
+        .modal {
+            left: 0;
+            width: 275px;
+        }
     }
 }
